--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
-version: "3.9"  # optional since v1.27.0
+version: "3.9"
+
 services:
   icecast:
     # About: https://github.com/moul/docker-icecast
     image: moul/icecast
     volumes:
-      - ./icecastlogs:/var/log/icecast2
       - /etc/localtime:/etc/localtime:ro
     environment:
       - ICECAST_SOURCE_PASSWORD=source-password
@@ -20,6 +20,3 @@ services:
       - ./stream.liq:/conf.liq
       - ./musicdir:/media
     command: /conf.liq
-    
-volumes:
-  logvolume01: {}
